tdf#131530 keep prepending footnote frame

Fix function name typo and actually prepend the footnote frame,
as the original code did. So much about "easy refactoring" :-(

Regression from commit 24caeee8236576abd92086974c1dbbf15b81a4c5
("Refactor a bit of the footnote handling code").

Change-Id: I227e30bc169fdfc237a5239d3ade6f035d85ca6e